--- a/mongodb.yml
+++ b/mongodb.yml
@@ -5,8 +5,8 @@
   tasks:
   - name: copy mongo repo into /etc/yum.repos.d/mongo.repo
     copy:
-      source: /home/centos/rs_ansible/mongo.repo
-      destination: /etc/yum.repos.d/mongo.repo
+      src: /home/centos/rs_ansible/mongo.repo
+      dest: /etc/yum.repos.d/mongo.repo
   
   - name: Install mongodb
     ansible.builtin.package:
