--- a/catalogue.yml
+++ b/catalogue.yml
@@ -7,9 +7,17 @@
     ansible.builtin.shell: |
      dnf module disable nodejs -y
      dnf module enable nodejs:18 -y
-
    
   - name: Install nodejs
     ansible.builtin.dnf:
       name: nodejs
       state: present
+
+  - name: Create roboshop user
+    ansible.builtin.user:
+      name: roboshop
+
+  - name: Create app directory
+    ansible.builtin.file:
+      path: /app
+      state: directory
