--- a/catalogue.yml
+++ b/catalogue.yml
@@ -21,3 +21,14 @@
     ansible.builtin.file:
       path: /app
       state: directory
+
+  - name: Download catalogue app code
+    ansible.builtin.get_url:
+      url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+      dest: /tmp
+
+  - name: Unzip the application contents into /app
+    ansible.builtin.unarchive:
+      src: /tmp/catalogue.zip
+      dest: /app
+      remote_src: yes
