rs_ansible_setup

--- a/catalogue.yml
+++ b/catalogue.yml
@@ -32,3 +32,33 @@
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
+
+  - name: install dependencies
+    ansible.builtin.command: npm install
+    args:
+      chdir: /app
+
+
+  - name: copy catalogue.service into systemd
+    copy:
+      src: /home/centos/rs_ansible/catalogue.service
+      dest: /etc/systemd/system/catalogue.service
+      
+
+  - name: daemon reload and start
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+
+
+  #Start after the data load 
+
+  - name: copy mongo repo into /etc/yum.repos.d/mongo.repo
+    copy:
+      src: /home/centos/rs_ansible/mongo.repo
+      dest: /etc/yum.repos.d/mongo.repo
+
+  - name: Install mongodb client
+    ansible.builtin.package:
+      name: mongodb-org-shell
+      state: present
+      
