rs_ansible_setup

--- a/catalogue.yml
+++ b/catalogue.yml
@@ -72,5 +72,5 @@
   #     msg: "product_count: {{product_count}}"
 
   - name: load the catalogue data
-    ansible.buitlin.command: mongo --host mongodb.roboriya.shop < /app/schema/catalogue.js
+    ansible.builtin.command: mongo --host mongodb.roboriya.shop < /app/schema/catalogue.js
     when: product_count.stdout == 0
