--- a/web.yml
+++ b/web.yml
@@ -33,11 +33,11 @@
 
   - name: Copy the roboshop config file
     ansible.builtin.copy:
-      src: /home/centos/rs_ansible
+      src: /home/centos/rs_ansible/roboshop.conf
       dest: /etc/nginx/default.d/roboshop.conf
 
   - name: Start and Enabling the nginx service
     ansible.builtin.service:
       name: nginx
-      state: started
+      state: restarted
       enabled: yes
