--- a/web.yml
+++ b/web.yml
@@ -34,7 +34,7 @@
   - name: Copy the roboshop config file
     ansible.builtin.copy:
       src: /home/centos/rs_ansible/roboshop.conf
-      dest: /etc/nginx/default.d/roboshop.conf
+      dest: /etc/nginx/default.d/
 
   - name: Start and Enabling the nginx service
     ansible.builtin.service:
