--- a/web.yml
+++ b/web.yml
@@ -37,22 +37,22 @@
       dest: /etc/nginx/default.d/roboshop.conf
 
   
-  - name: Ensure nginx is enabled
-    ansible.builtin.service:
-      name: nginx
-      enabled: yes
+  # - name: Ensure nginx is enabled
+  #   ansible.builtin.service:
+  #     name: nginx
+  #     enabled: yes
 
-  - name: Restart nginx service
-    ansible.builtin.service:
-      name: nginx
-      state: restarted
-
-
-  # - name: Start and Enabling the nginx service
+  # - name: Restart nginx service
   #   ansible.builtin.service:
   #     name: nginx
   #     state: restarted
-  #     enabled: yes
+
+
+  - name: Start and Enabling the nginx service
+    ansible.builtin.service:
+      name: nginx
+      state: restarted
+      enabled: yes
   
   # - name: start and enable nginx
   #   ansible.builtin.service:
