--- a/inventory.ini
+++ b/inventory.ini
@@ -1,19 +1,27 @@
 [mongodb]
 mongodb.roboriya.shop
+
 [catalogue]
 catalogue.roboriya.shop
+
 [user]
 user.roboriya.shop
+
 [cart]
 cart.roboriya.shop
+
 [shipping]
 shipping.roboriya.shop
+
 [redis]
 redis.roboriya.shop
+
 [mysql]
 mysql.roboriya.shop
-[shipping]
-shipping.roboriya.shop
+
+[payment]
+payment.roboriya.shop
+
 [web]
 web.roboriya.shop
 
