--- a/payment.yml
+++ b/payment.yml
@@ -16,10 +16,17 @@
     ansible.builtin.user:
       name: roboshop
 
+
+  - name: Removing app directory
+    ansible.builtin.file:
+      path: /app
+      state: absent
+
   - name: creating an app directory
     ansible.builtin.file:
       path: /app
       state: directory
+      
   - name: downloading the appliction code
     ansible.builtin.get_url:
       name: https://roboshop-builds.s3.amazonaws.com/payment.zip
