--- a/payment.yml
+++ b/payment.yml
@@ -26,7 +26,7 @@
     ansible.builtin.file:
       path: /app
       state: directory
-      
+
   - name: downloading the appliction code
     ansible.builtin.get_url:
       name: https://roboshop-builds.s3.amazonaws.com/payment.zip
@@ -38,7 +38,7 @@
       dest: /app
   
   - name: Installing dependencies
-    ansilbe.builtin.command: pip3.6 install -r requirements.txt
+    ansible.builtin.command: pip3.6 install -r requirements.txt
     args:
       chdir: /app
   
