--- a/payment.yml
+++ b/payment.yml
@@ -36,6 +36,7 @@
     ansible.builtin.unarchive:
       src: /tmp/payment.zip
       dest: /app
+      remote_src: yes
   
   - name: Installing dependencies
     ansible.builtin.command: pip3.6 install -r requirements.txt
